<resources>
    <!--    General-->
    <string name="music_off">Music Stopped</string>
    <string name="music_on">Music Playing</string>
    <string name="app_name">FindHim</string>

    <!--    Main Activity-->
    <string name="helpBtn">Help</string>
    <string name="exitBtn">Exit</string>
    <string name="configuration">Configuration</string>

    <!--    Help Activity-->
    <string name="help_activity_tittle">Help</string>
    <string name="backPage">Go Back</string>
    <string name="help_message">Welcome to the Find Waldo game! Your goal is to locate Waldo in a busy scene. Look for his red and white striped shirt, hat, and glasses. Click on Waldo when you find him to move on to the next level. Good luck!.</string>

    <!--    Start Activity-->
    <string name="alias">Player Name</string>
    <string name="selectlvlTitle">Choose a level: </string>
    <string name="cell_size">Waldo size (55 – 200)</string>
    <string name="error_waldo_size">Enter a correct size !</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="startBtn">Start Game</string>

    <!--    Game Activity-->
    <string name="game_title">Welcome to the Game! %s, Attempts: %d</string>
    <string name="win_text">You win!</string>
    <string name="try_again">Try again!</string>
    <string name="lost">Time is over , you lost</string>

    <!--    Final Layout-->
    <string name="tittle_final">Congratulations! You found Wally</string>
    <string name="your_results">Your results</string>
    <string name="number_of_attempts">Number of attempts: </string>
    <string name="total_time">Total time: </string>
    <string name="play_again">Play again !</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="submit">Submit</string>
    <string name="history">History</string>


    <!--    Keys-->
    <string name="LEVEL">level</string>
    <string name="BUTTON_SELECTED">button</string>

    <!--    keys of GameFragment-->
    <string name="ARG_CELL_SIZE">arg_cell_size</string>
    <string name="ARG_MAP">arg_amp</string>
    <string name="ARG_NICKNAME">arg_name</string>

    <string name="game_id">Game ID:</string>
    <string name="nickname">Nickname:</string>
    <string name="timespent">TimeSpent:</string>
    <string name="clicks">Clicks:</string>
    <string name="game_details">Game Details</string>
    <string name="delete_all">Delete All</string>
    <string name="date">Date:</string>
    <string name="stats">STATS</string>
    <string name="game_key">game</string>
    <string name="waldopos">waldoPos</string>


</resources>