<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/logElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:background="@color/purple_200">

        <TextView
            android:id="@+id/gameIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_id"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/gameId"
            tools:text="x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/gameIdLabel"
            />
        <TextView
            android:id="@+id/playerNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gameIdLabel"
            android:text="@string/nickname"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/playerName"
            tools:text="player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gameIdLabel"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/playerNameLabel"
            />

        <TextView
            android:id="@+id/gameTimeLabel"
            android:layout_below="@id/playerNameLabel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/timespent"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/gameTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playerNameLabel"

            android:layout_toEndOf="@id/gameTimeLabel"
            android:textColor="@color/black"
            tools:text="00:00" />

        <TextView
            android:id="@+id/clicksLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gameTimeLabel"
            android:text="@string/clicks"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/clicks"
            android:layout_below="@id/gameTimeLabel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            tools:text="0"

            android:layout_toEndOf="@id/clicksLabel"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
